@@ -11,12 +11,16 @@ to FreeBSD, Solaris, Tru64, and Windows.
 
 Relationship to sg3_utils
 -------------------------
-This package shares code with sg3_utils (version 1.24).
-sg3_utils is a package of utilities that typically act at the SCSI
-command level. sg3_utils is written by the same author. The shared code
-(sg_lib.[hc] and sg_cmds_basic.[hc]) includes tables of SCSI command
-names and additional sense code descriptions as well as functions for
-issuing common SCSI commands.
+This package shares code with sg3_utils (version 1.25). With subversion
+this is done by having sdparm's "include/" and "lib/" subdirectories
+pointing to the correspondingly named directories in the sg3_utils package
+using the "svn:externals" property. These two "external" directories
+include more files than sdparm uses. The excess files
+include "lib/Makefile.am" and "lib/Makefile.in" as the "Makfile.am" in
+sdparm's "src/" directory does the main part of the build. When the tarball
+is generated for this utility, various files are "exported" out of the
+subversion repository and "svn:externals" redirection is no longer
+visible (but the unused files are visible).
 
 Currently the shared code is statically compiled in to each package.
 It is the intention of the author to make a common library called
@@ -30,7 +34,7 @@ option is given. Many syntax errors also result in the usage message
 being printed. There is also a man page which is in chapter 8. It
 can be accessed with "man sdparm" once this package is installed. Prior
 to installation the man page can be viewed from this package's
-main directory with "man ./sdparm.8".
+main directory with "man doc/sdparm.8".
 
 There is a web page at http://www.torque.net/sg/sdparm.html and
 a copy of that html file is placed in the "doc" directory.
