@@ -1,0 +1,3 @@
+
+man_MANS = sdparm.8
+
