@@ -2,7 +2,7 @@ sdparm (1.02-0.1) unstable; urgency=low
 
   * add block device characteristics VPD page
 
- -- Douglas Gilbert <dgilbert@interlog.org>  Sun, 23 Sep 2007 23:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.org>  Mon, 24 Sep 2007 13:00:00 -0400
 
 sdparm (1.01-0.1) unstable; urgency=low
 
